--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <title>Calculator</title>
 </head>
 <body>
-   <div class="container">
+   <div class="">
        <div class="row d-flex justify-content-center p-sm-5">
            <div class="col-lg-6">
                <div class="card calculator">
