--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
     <title>Calculator</title>
 </head>
 <body>
-   <div class="">
+   <div class="container">
        <div class="row d-flex justify-content-center p-sm-5">
-           <div class="col-lg-6">
+           <div class="">
                <div class="card calculator">
                    <div class="card-header text-center bg-secondary">
                        <h3> Calculator </h3>
