--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
    <div class="container">
        <div class="row d-flex justify-content-center p-sm-5">
-           <div class="">
+           <div class="col-xl-6">
                <div class="card calculator">
                    <div class="card-header text-center bg-secondary">
                        <h3> Calculator </h3>
@@ -44,7 +44,8 @@
                                <button type="button" name="back" id="back" class="btn btn-warning btn-block" onclick="setback()" >&laquo; </button>
                            </div>
 
-                           <div class="bbb">
+                           <div class="bbb
+">
                                <button type="button"  class="btn btn-primary btn-block" onclick="setOp('')" >%</button>
                            </div>
 
