--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
    <div class="container">
        <div class="row d-flex justify-content-center p-sm-5">
-           <div class="col-xl-6">
+           <div class="col-sm-6">
                <div class="card calculator">
                    <div class="card-header text-center bg-secondary">
                        <h3> Calculator </h3>
