--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <title>Calculator</title>
 </head>
 <body>
-   <div class="container">
+   <div class="container-fluid">
        <div class="row d-flex justify-content-center p-sm-5">
            <div class="col-sm-6">
                <div class="card calculator">
@@ -46,7 +46,7 @@
 
                            <div class="bbb
 ">
-                               <button type="button"  class="btn btn-primary btn-block" onclick="setOp('')" >%</button>
+                               <button type="button"  class="btn btn-primary btn-block" onclick="set('%')" >%</button>
                            </div>
 
 
